2017-10-19         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.2.0: Release tar ball made.

2017-10-13         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkbool.h: Removed.

2017-10-08         Arnold D. Robbins     <arnold@skeeve.com>

	* strncasecmp.c: Fix FSF's address.

2017-06-21         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* getaddrinfo.c (getaddrinfo): Replace malloc+memset with calloc.

2016-10-23         Arnold D. Robbins     <arnold@skeeve.com>

	* General: Remove trailing whitespace from all relevant files.

2016-09-07         Arnold D. Robbins     <arnold@skeeve.com>

	* setenv.c: Update license text in setenv.c. Thanks
	to David Kaspar <dkaspar@redhat.com> for pointing out
	the necessity.

2016-08-25         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.4: Release tar ball made.

2015-05-19         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.3: Release tar ball made.

2015-04-29         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.2: Release tar ball made.

2015-02-27         Arnold D. Robbins     <arnold@skeeve.com>

	* getaddrinfo.h (gai_strerror): Add declaration.
	* getaddrinfo.c (gai_strerror): New function.
	(getaddrinfo): Return errno values instead of just -1.

2014-04-08         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.1: Release tar ball made.

2013-05-09         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.0: Release tar ball made.

2013-02-11         Arnold D. Robbins     <arnold@skeeve.com>

	* fnmatch.h, fnmatch.c: New files, from GNU Make.

2012-12-24         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.0.2: Release tar ball made.

2012-09-13         Arnold D. Robbins     <arnold@skeeve.com>

	* snprintf.c, strtoul.c: Remove TRUE/FALSE in favor of true/false.

2012-05-04         Arnold D. Robbins     <arnold@skeeve.com>

	* snprintf.c [DJGPP]: Change to __DJGPP__.

2012-03-28         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.0.1: Release tar ball made.
